--- a/app/src/main/res/layout/activity_input_coroutine.xml
+++ b/app/src/main/res/layout/activity_input_coroutine.xml
@@ -10,7 +10,7 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout2"
+        android:id="@+id/idInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -26,27 +26,27 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayout"
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginTop="24dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
-        tools:layout_marginTop="24dp">
+        app:layout_constraintTop_toBottomOf="@+id/idInputLayout">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/pwInput"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <com.google.android.material.button.MaterialButton
         android:text="확인"
         android:layout_marginHorizontal="24dp"
         android:id="@+id/materialButton"
         android:paddingTop="12dp"
+        android:textSize="18dp"
         android:paddingBottom="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
