--- a/app/src/main/res/layout/activity_input_coroutine.xml
+++ b/app/src/main/res/layout/activity_input_coroutine.xml
@@ -21,6 +21,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/idInput"
+            android:inputType="text"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
@@ -28,6 +29,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_marginHorizontal="24dp"
+        android:id="@+id/pwInputLayout"
         android:layout_marginTop="24dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -35,6 +37,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/pwInput"
+            android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
