--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -31,7 +31,7 @@
         app:startIconDrawable="@drawable/ic_search">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/search_input"
+            android:id="@+id/searchInput"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="text" />
