--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="24dp"
-        android:textSize="16dp"
         android:text="[답정너 검색창]"
+        android:textSize="16dp"
         android:textStyle="bold" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -43,7 +43,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/searchResult"
@@ -51,6 +52,14 @@
             android:layout_height="match_parent"
             android:textSize="32dp"
             tools:text="text" />
+
+        <ImageView
+            android:visibility="gone"
+            android:id="@+id/searchResultImage"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/img_chicken" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
